<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/ShowConsoleLayout">
    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="vertical"
                  android:layout_marginBottom="140dip" 
                  android:layout_marginTop="2dip">
        <AutoCompleteTextView android:id="@+id/command"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="10dp"
                android:hint="@string/enter_command"
                android:background="@android:drawable/editbox_background"/>
        <ListView android:id="@+id/commandList"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:drawSelectorOnTop="false"/>
    </LinearLayout>
    <RelativeLayout android:layout_marginTop="-140dip" 
                     android:gravity="bottom" 
                     android:layout_height="wrap_content" 
                     android:layout_width="fill_parent">
    <View
        android:layout_height="1dip"
        android:layout_width="fill_parent"
        android:background="#FF909090" />
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="2dip">
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                   <Button android:id="@+id/defvar" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="var"></Button>
                   <Button android:id="@+id/newobj" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="new"></Button>
                   <Button android:id="@+id/ifstate" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="if"></Button>
                   <Button android:id="@+id/fnc" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="fnc"></Button>
                   <Button android:id="@+id/forloop" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="for"></Button>
                   <Button android:id="@+id/whileloop" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="while"></Button>
                   <Button android:id="@+id/trycatch" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="try"></Button>
               </LinearLayout>
               <LinearLayout android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
                   <Button android:id="@+id/parantez" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="( )"></Button>
                   <Button android:id="@+id/suslu" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="{ }"></Button>
                   <Button android:id="@+id/koseli" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="[ ]"></Button>
                   <Button android:id="@+id/jshort" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="$"></Button>
                   <Button android:id="@+id/cifttirnak" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text='" "'></Button>
                   <Button android:id="@+id/tektirnak" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="' '"></Button>
                   <Button android:id="@+id/esittir" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="="></Button>
                   <Button android:id="@+id/newline" 
                           android:layout_height="wrap_content" 
                           android:layout_width="wrap_content"
                           android:layout_weight="1"
                           android:text="@string/new_line"></Button>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <Button android:id="@+id/ClearLine" 
                                android:layout_height="wrap_content" 
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:textColor="#A52A2A"
                                android:textStyle="bold"
                                android:text="@string/clear_line"></Button>
                <Button android:id="@+id/runCommand" 
                                android:layout_height="wrap_content" 
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:textColor="#008000"
                                android:textStyle="bold"
                                android:text="@string/run_command"></Button>
                <Button android:id="@+id/ClearConsone" 
                                android:layout_height="wrap_content" 
                                android:layout_width="wrap_content"
                                android:layout_weight="2"
                                android:textColor="#4169E1"
                                android:text="@string/clear_console"></Button>
            </LinearLayout>
     </LinearLayout>
     </RelativeLayout>
</LinearLayout>